--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.5.0",
         "p2ee/preparables": "dev-master",
-        "rg/injektor": "v1.0.0"
+        "rg/injektor": ">=1.2.0,<2.0.0-dev"
     },
     "autoload": {
         "psr-0": {"p2ee\\": "src/"}
