--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "p2ee/partlets",
     "description": "Base package for the partlet hmvc system",
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "4.1.*"
     },
     "license": "MIT",
     "authors": [
@@ -11,7 +11,7 @@
             "email": "martin@holzhauer.eu"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.5.0",
         "p2ee/preparables": "dev-master",
