--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "p2ee/partlets",
     "description": "Base package for the partlet hmvc system",
     "require-dev": {
-        "phpunit/phpunit": "4.1.*"
+        "phpunit/phpunit": "~6.3"
     },
     "license": "MIT",
     "authors": [
